--- a/app/src/main/res/layout/activity_pay_request.xml
+++ b/app/src/main/res/layout/activity_pay_request.xml
@@ -190,9 +190,9 @@
                                     android:gravity="center_vertical|right"
                                     android:hint="0.00"
                                     android:inputType="numberDecimal"
-                                    android:textColorHint="@color/light_gray"
                                     android:maxLength="@string/maxlength"
                                     android:textColor="@color/primary_black"
+                                    android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursorcolor"
                                     android:textSize="@dimen/_53ssp" />
 
@@ -312,9 +312,10 @@
             <TextView
                 android:id="@+id/tvRequest"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
                 android:text="Request"
                 android:textAlignment="center"
                 android:textColor="@color/white"
@@ -331,9 +332,10 @@
             <TextView
                 android:id="@+id/tvPay"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
                 android:text="Pay"
                 android:textAlignment="center"
                 android:textColor="@color/white"
