--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -110,7 +110,7 @@
 
                     <TextView
                         android:id="@+id/viewAllTV"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_11sdp"
                         android:layout_marginTop="@dimen/_5sdp"
@@ -182,7 +182,6 @@
                                     android:inputType="numberDecimal"
                                     android:maxLength="30"
                                     android:padding="@dimen/_14sdp"
-                                    android:saveEnabled="false"
                                     android:textColor="@color/text_color"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursor_color"
@@ -241,7 +240,6 @@
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                            android:saveEnabled="false"
                             android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
@@ -299,7 +297,6 @@
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                            android:saveEnabled="false"
                             android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
@@ -357,7 +354,6 @@
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                            android:saveEnabled="false"
                             android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
