--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".view.WebViewActivity">
 
-    <WebView
+    <im.delight.android.webview.AdvancedWebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
