--- a/app/src/main/res/drawable-v24/card_background.xml
+++ b/app/src/main/res/drawable-v24/card_background.xml
@@ -3,6 +3,6 @@
 <corners android:radius="10dp" />
     <gradient android:startColor="@color/white" android:centerColor="@color/white" android:endColor="@color/white"/>
 
-    <stroke android:width="1dp" android:color="#A3A3A3"/>
+    <stroke android:width="1dp" android:color="@color/light_gray"/>
 
 </shape>
