--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -381,9 +381,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="15dp"
                     android:paddingTop="20dp"
-                    android:paddingRight="15dp"
                     android:paddingBottom="30dp">
 
                     <TextView
@@ -391,6 +389,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:text="Recipient’s Address"
+                        android:layout_marginStart="15dp"
                         android:textColor="@color/xdark_gray"
                         android:textSize="@dimen/_11ssp" />
 
@@ -399,6 +398,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
+                        android:layout_marginEnd="15dp"
                         android:fontFamily="@font/opensans_semibold"
                         android:text=""
                         android:textColor="#404040"
@@ -416,7 +416,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/divider"
-                        android:layout_marginStart="@dimen/_36sdp"
+                       android:paddingStart="@dimen/_36sdp"
                         android:layout_marginTop="@dimen/_25sdp">
 
                         <LinearLayout
@@ -445,7 +445,7 @@
 
                         <View
                             android:layout_width="1dp"
-                            android:layout_height="@dimen/_20sdp"
+                            android:layout_height="@dimen/_35sdp"
                             android:layout_centerInParent="true"
                             android:background="@color/light_gray"></View>
 
