--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -16,7 +16,6 @@
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
-        android:paddingRight="@dimen/_21sdp"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -66,7 +65,7 @@
             android:text="As a security measure, you will be logged \nout of your account once you successfully \nchange your password. "
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -78,6 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/_15sdp"
+                android:paddingEnd="@dimen/_21sdp"
                 android:scrollbars="none">
 
                 <LinearLayout
