--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -315,9 +315,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
+                        android:layout_marginTop="@dimen/_100sdp"
                         android:orientation="vertical"
-                        android:paddingBottom="@dimen/_37sdp"
-                        android:layout_marginTop="@dimen/_100sdp">
+                        android:paddingBottom="@dimen/_37sdp">
 
                         <androidx.cardview.widget.CardView
                             android:id="@+id/nextBtn"
