--- a/app/src/main/res/layout/image_picker_options_dialog.xml
+++ b/app/src/main/res/layout/image_picker_options_dialog.xml
@@ -10,20 +10,12 @@
     android:background="@drawable/roundeddialog"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <View
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_3sdp"
-            android:layout_gravity="center"
-            android:background="@drawable/shape_green_round_rect" />
-
-    </LinearLayout>
+    <View
+        android:layout_width="@dimen/_43sdp"
+        android:layout_height="@dimen/_2sdp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_13sdp"
+        android:background="@drawable/bg_core_colorfill" />
 
 
     <LinearLayout
