--- a/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:id="@+id/hintdHolderLL"
+        android:id="@+id/companyhintdHolderLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/outline_box_unfocused"
@@ -43,7 +44,7 @@
         </LinearLayout>
 
         <com.santalu.maskara.widget.MaskEditText
-            android:id="@+id/pnET"
+            android:id="@+id/companypnET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_gravity="center"
@@ -66,7 +67,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/hintTV"
+        android:id="@+id/companyhintTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -76,10 +77,12 @@
         android:paddingEnd="4dp"
         android:textSize="@dimen/text_size_11sp"
         android:fontFamily="@font/opensans_semibold"
-        android:text="Phone Number"
+        android:text="Company Phone Number"
         android:textColor="@color/primary_black"
-        app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"
-        app:layout_constraintStart_toStartOf="@+id/hintdHolderLL"
-        app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />
+        app:layout_constraintBottom_toTopOf="@+id/companyhintdHolderLL"
+        app:layout_constraintStart_toStartOf="@+id/companyhintdHolderLL"
+        app:layout_constraintTop_toTopOf="@+id/companyhintdHolderLL"
+         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
