payment Method Screen Design

--- a/app/src/main/res/layout/activity_quick_action.xml
+++ b/app/src/main/res/layout/activity_quick_action.xml
@@ -26,15 +26,16 @@
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/_6sdp"
-            android:src="@drawable/ic_scan" />
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:src="@drawable/ic_scan"
+            android:contentDescription="@string/scan"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_9sdp"
+            android:layout_marginStart="@dimen/_9sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:text="Scan"
+            android:text="@string/scan"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
@@ -64,17 +65,18 @@
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_24sdp"
             android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginRight="@dimen/_6sdp"
-            android:src="@drawable/ic_send_icon" />
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:src="@drawable/ic_send_icon"
+            android:contentDescription="@string/pay_request"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="9dp"
+            android:layout_marginStart="9dp"
             android:layout_marginTop="@dimen/_14sdp"
             android:layout_marginBottom="@dimen/_16sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:text="Pay/Request"
+            android:text="@string/pay_request"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
@@ -87,8 +89,8 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="1.5dp"
-            android:layout_marginLeft="@dimen/_24sdp"
-            android:layout_marginRight="@dimen/_24sdp"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_24sdp"
             android:background="@color/blue_light" />
     </LinearLayout>
 
@@ -96,25 +98,26 @@
         android:id="@+id/buyTokenLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_20sdp"
-        android:layout_marginRight="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
             android:layout_marginTop="@dimen/_12ssp"
-            android:layout_marginRight="@dimen/_6sdp"
-            android:src="@drawable/ic_buy_icon" />
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:src="@drawable/ic_buy_icon"
+            android:contentDescription="@string/buy_tokens"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_6sdp"
+            android:layout_marginStart="@dimen/_6sdp"
             android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginBottom="@dimen/_15sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:text="Buy Tokens"
+            android:text="@string/buy_tokens"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
@@ -127,8 +130,8 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="1.5dp"
-            android:layout_marginLeft="@dimen/_24sdp"
-            android:layout_marginRight="@dimen/_24sdp"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_24sdp"
             android:background="@color/blue_light" />
     </LinearLayout>
 
@@ -136,25 +139,26 @@
         android:id="@+id/widthdrawLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_20sdp"
-        android:layout_marginRight="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
             android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginRight="@dimen/_6sdp"
-            android:src="@drawable/ic_withdraw_icon" />
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:src="@drawable/ic_withdraw_icon"
+            android:contentDescription="@string/withdraw_to_usd"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_6sdp"
+            android:layout_marginStart="@dimen/_6sdp"
             android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginBottom="@dimen/_14sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:text="Withdraw to USD"
+            android:text="@string/withdraw_to_usd"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
@@ -168,8 +172,8 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="1.5dp"
-            android:layout_marginLeft="@dimen/_24sdp"
-            android:layout_marginRight="@dimen/_24sdp"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_24sdp"
             android:background="@color/blue_light" />
     </LinearLayout>
 </LinearLayout>
