--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
+        android:layout_above="@+id/lyBottom"
         android:scrollbars="none">
 
         <LinearLayout
@@ -345,29 +346,40 @@
 
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:id="@+id/tvExchange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/opensans_regular"
+                android:text="Exchange Rate: 1.00 CYN = $ 1.00"
+                android:textColor="@color/xdark_gray"
+                android:textSize="@dimen/_9ssp"></TextView>
+
         </LinearLayout>
     </ScrollView>
 
     <LinearLayout
+        android:id="@+id/lyBottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="@dimen/_5sdp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvExchange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/opensans_regular"
-            android:text="Exchange Rate: 1.00 CYN = $ 1.00"
-            android:textColor="@color/xdark_gray"
-            android:textSize="@dimen/_9ssp"></TextView>
+<!--        <TextView-->
+<!--            android:id="@+id/tvExchange"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:fontFamily="@font/opensans_regular"-->
+<!--            android:text="Exchange Rate: 1.00 CYN = $ 1.00"-->
+<!--            android:textColor="@color/xdark_gray"-->
+<!--            android:textSize="@dimen/_9ssp"></TextView>-->
 
         <com.greenbox.coyni.utils.keyboards.CustomKeyboard
             android:id="@+id/ckb"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
